# SDL2-CMake-Barebones

./: .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  sdl2.hpp
